--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
     <header>
         <div class="header-container"
-            <!-- <img src="assets/images/education.png" class="boy" alt="header image" />   -->
-            <img src="assets/images/education.png" alt="header image" />  
+            <!-- <img src="assets/images/education.png" class="boy image-small" alt="header image" />   
+            <img src="assets/images/education.png" class="boy image-small" alt="header image" />  
             <h1 class="name">Amy Ying Lin</h1>
             <h2 class="subtitle text-center"> Neuroscientist - Pharmacologist - Data Scientist - Lifelong Learner  </h2>  
         </div>
