--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <div class="header-container"
             <!-- <img src="assets/images/education.png" class="boy image-small" alt="header image" />   
-            <img src="assets/images/education.png" class="boy image-small" alt="header image" />  
+            <img src="assets/images/education.png" class="image-small" alt="header image" />  
             <h1 class="name">Amy Ying Lin</h1>
             <h2 class="subtitle text-center"> Neuroscientist - Pharmacologist - Data Scientist - Lifelong Learner  </h2>  
         </div>
